<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transcript_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:id="@+id/transcript_idle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <org.fossify.commons.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/transcribe"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/transcript_idle_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            tools:text="Speech model not installed (~120 MB will be downloaded)." />

        <Button
            android:id="@+id/transcript_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transcribe" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transcript_busy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/transcript_busy_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            tools:text="Transcribing… 42%" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/transcript_busy_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100" />

        <Button
            android:id="@+id/transcript_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/cancel_transcription"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transcript_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/transcript_ready_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smaller_text_size"
            tools:text="Language: en · 14 segments" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/transcript_ready_processing_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:textSize="@dimen/smaller_text_size"
            android:visibility="gone"
            tools:text="Processed in 12.4s"
            tools:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxHeight="380dp">

            <LinearLayout
                android:id="@+id/transcript_segments_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/transcript_retranscribe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/re_transcribe"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>
